--- a/aws-saas-backend/package.json
+++ b/aws-saas-backend/package.json
@@ -11,11 +11,13 @@
   "description": "",
   "dependencies": {
     "aws-sdk": "^2.1692.0",
+    "axios": "^1.8.1",
     "body-parser": "^1.20.3",
     "cors": "^2.8.5",
     "dotenv": "^16.4.7",
     "express": "^4.21.2",
     "jsonwebtoken": "^9.0.2",
+    "jwk-to-pem": "^2.0.7",
     "uuid": "^11.1.0"
   }
 }
