Cleaned up code

--- a/aws-saas-frontend/.env
+++ b/aws-saas-frontend/.env
@@ -1,7 +1,10 @@
 VITE_COGNITO_REGION=us-west-1
-VITE_COGNITO_USER_POOL_ID=us-west-1_mJ0nwfHd2
-VITE_COGNITO_CLIENT_ID=5132d0n28h947jm6gv4t06n2vl
+VITE_COGNITO_USER_POOL_ID=us-west-1_SWKLHxAyC
+VITE_COGNITO_CLIENT_ID=1ndb57c40sqd4qgc3r8n16js2n
+VITE_COGNITO_IDENTITY_POOL_ID=us-west-1:b548a2c8-d6fc-4f02-b6bd-9330631ff9f9
+VITE_COGNITO_AUTHENTICATION_DOMAIN=https://us-west-1swklhxayc.auth.us-west-1.amazoncognito.com
 
-VITE_BACKEND_URL=http://52.53.157.10:5000/api
+VITE_S3_BUCKET_NAME=avs-saas-web-app
 
-VITE_S3_BUCKET_NAME=my-saas-app-bucket
+VITE_API_BASE_URL=https://vvtba9syih.execute-api.us-west-1.amazonaws.com/MySaaSAppStage-1
+VITE_FRONTEND_ORIGIN=http://13.57.13.204
